kubernetes/apps/media/torrent/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qbittorrent
  labels:
    pod-security.kubernetes.io/enforce: privileged
  annotations:
      volsync.backube/privileged-movers: "true"
