kubernetes/apps/media/torrent/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qb1
  namespace: qbittorrent
  annotations:
    nginx.ingress.kubernetes.io/auth-method: 'GET'
    nginx.ingress.kubernetes.io/auth-url: 'http://authelia.authelia.svc.cluster.local:9091/api/verify'
    nginx.ingress.kubernetes.io/auth-signin: 'https://auth.${DOMAIN_0}?rm=$request_method'
    nginx.ingress.kubernetes.io/auth-response-headers: 'Remote-User,Remote-Name,Remote-Groups,Remote-Email'
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Accept-Encoding "";
      sub_filter '</head>' '<link rel="stylesheet" type="text/css" href="https://theme-park.dev/css/base/qbittorrent/nord.css"></head>';
      sub_filter_once on;
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - qb1.${DOMAIN_0}
      secretName: certificate-issuer-domain-0-wildcard
  rules:
    - host: qb1.${DOMAIN_0}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qb1-qbittorrent
                port:
                  name: main
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qb2
  namespace: qbittorrent
  annotations:
    nginx.ingress.kubernetes.io/auth-method: 'GET'
    nginx.ingress.kubernetes.io/auth-url: 'http://authelia.authelia.svc.cluster.local:9091/api/verify'
    nginx.ingress.kubernetes.io/auth-signin: 'https://auth.${DOMAIN_0}?rm=$request_method'
    nginx.ingress.kubernetes.io/auth-response-headers: 'Remote-User,Remote-Name,Remote-Groups,Remote-Email'
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Accept-Encoding "";
      sub_filter '</head>' '<link rel="stylesheet" type="text/css" href="https://theme-park.dev/css/base/qbittorrent/overseerr.css"></head>';
      sub_filter_once on;
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - qb2.${DOMAIN_0}
      secretName: certificate-issuer-domain-0-wildcard
  rules:
    - host: qb2.${DOMAIN_0}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qb2-qbittorrent
                port:
                  name: main
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qb3
  namespace: qbittorrent
  annotations:
    nginx.ingress.kubernetes.io/auth-method: 'GET'
    nginx.ingress.kubernetes.io/auth-url: 'http://authelia.authelia.svc.cluster.local:9091/api/verify'
    nginx.ingress.kubernetes.io/auth-signin: 'https://auth.${DOMAIN_0}?rm=$request_method'
    nginx.ingress.kubernetes.io/auth-response-headers: 'Remote-User,Remote-Name,Remote-Groups,Remote-Email'
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Accept-Encoding "";
      sub_filter '</head>' '<link rel="stylesheet" type="text/css" href="https://theme-park.dev/css/base/qbittorrent/space-gray.css"></head>';
      sub_filter_once on;
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - qb3.${DOMAIN_0}
      secretName: certificate-issuer-domain-0-wildcard
  rules:
    - host: qb3.${DOMAIN_0}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qb3-qbittorrent
                port:
                  name: main
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qb4
  namespace: qbittorrent
  annotations:
    nginx.ingress.kubernetes.io/auth-method: 'GET'
    nginx.ingress.kubernetes.io/auth-url: 'http://authelia.authelia.svc.cluster.local:9091/api/verify'
    nginx.ingress.kubernetes.io/auth-signin: 'https://auth.${DOMAIN_0}?rm=$request_method'
    nginx.ingress.kubernetes.io/auth-response-headers: 'Remote-User,Remote-Name,Remote-Groups,Remote-Email'
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Accept-Encoding "";
      sub_filter '</head>' '<link rel="stylesheet" type="text/css" href="https://theme-park.dev/css/base/qbittorrent/maroon.css"></head>';
      sub_filter_once on;
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - qb4.${DOMAIN_0}
      secretName: certificate-issuer-domain-0-wildcard
  rules:
    - host: qb4.${DOMAIN_0}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qb4-qbittorrent
                port:
                  name: main
